Added link to resume in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>This is my website
                 <br> Details and work experience
             </p>
-        <a href="">DOWNLOAD CV</a>    
+        <a href="https://drive.google.com/file/d/1dbMvTbldQppf47xIBbQMCVC2a9m-45rZ/view?usp=share_link">DOWNLOAD CV</a>    
         </div>
         <div class="images">
             <img src="images/travis.png" alt="">
